--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
   "name": "req-params",
-  "version": "1.0.1",
+  "version": "1.1.1",
   "description": "Check incoming parameters",
   "keywords": "params, validate",
   "main": "index.js",
   "author": "Aleksandr Shirobokov",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/konrin/req-params.git"
+  },
+  "bugs": {
+    "url": "https://github.com/konrin/req-params/issues"
+  },
   "license": "ISC",
   "dependencies": {
     "lodash": "^4.8.2"
